Minor fixes